--- a/src/HS2_ConfigurationManager/packages.config
+++ b/src/HS2_ConfigurationManager/packages.config
@@ -7,6 +7,8 @@
   <package id="IllusionLibs.HoneySelect2.IL" version="2020.5.29" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.Sirenix.Serialization" version="2020.5.29" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.UnityEngine.CoreModule" version="2018.4.11" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.HoneySelect2.UnityEngine.AudioModule" version="2018.4.11" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.UnityEngine.IMGUIModule" version="2018.4.11" targetFramework="net46" developmentDependency="true" />
   <package id="IllusionLibs.HoneySelect2.UnityEngine.UI" version="2018.4.11" targetFramework="net46" developmentDependency="true" />
+  <package id="IllusionLibs.HoneySelect2.UniRx" version="2020.5.29" targetFramework="net46" developmentDependency="true" />
 </packages>
